# Morning-Briefing-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
credentials/: README.md
docs/: credential-setup.md
outputs/: morning-briefing-demo.html  morning-briefing-product-blueprint.md
src/morning_briefing_agent/: __init__.py  classifier.py  cli.py  config.py  delivery.py  doctor.py  models.py  renderer.py  sample_data.py
tests/: test_classifier.py  test_config.py  test_delivery.py
