[project]
name = "morning-briefing-agent"
version = "0.1.0"
description = "A local-first morning briefing agent prototype for email, calendar, Slack, newsletters, and job applications."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
morning-briefing = "morning_briefing_agent.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
